--- a/notebooks/figures/Results.ipynb
+++ b/notebooks/figures/Results.ipynb
@@ -284,6 +284,144 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### The interesting 3:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from thejoker.data import RVData"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_plot_path = '../../plots/three-interesting'\n",
+    "os.makedirs(_plot_path, exist_ok=True)\n",
+    "\n",
+    "with h5py.File(samples_file) as f:\n",
+    "    for apogee_id in ['2M01231070+1801407', # BH\n",
+    "                      '2M04582049+2232000', # BD\n",
+    "                      '2M20130687+2044173']: # BD\n",
+    "        samples = JokerSamples.from_hdf5(f[apogee_id])\n",
+    "        star = AllStar.get_apogee_id(session, apogee_id)\n",
+    "        data = star.apogeervdata()\n",
+    "        \n",
+    "        rows = bi_cat[bi_cat['APOGEE_ID'] == apogee_id]\n",
+    "        a2s = [get_a2sini(r['P'], r['e'], r['K'], r['M1'], r['M2_min']) \n",
+    "               for r in rows]\n",
+    "        print('in Troup: {0}\\n'.format(apogee_id in troup['APOGEE_ID']) + \n",
+    "              'logg = {0:.2f}, Teff = {1:.1f}\\n'.format(star.logg, star.teff) + \n",
+    "              'a2sini = {0:.3f} or {1:.3f}'.format(*a2s))\n",
+    "        \n",
+    "        # with LAMOST RV: http://dr3.lamost.org/spectrum/view?obsid=268505101\n",
+    "        data = RVData(t=Time(np.append(data.t.mjd, [56980.]), format='mjd'),\n",
+    "                      rv=np.append(data.rv.value, 11.1)*u.km/u.s,\n",
+    "                      stddev=np.append(data.stddev.value, 0.5)*u.km/u.s)\n",
+    "        \n",
+    "        fig = plot_two_panel(data, samples)\n",
+    "        fig.axes[0].set_title(star.apogee_id)\n",
+    "        fig.tight_layout()\n",
+    "#         fig.savefig(path.join(_plot_path, '{0}.png'.format(apogee_id)), dpi=250)\n",
+    "\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "samples['P'].min(), samples['P'].max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from thejoker import TheJoker, JokerParams"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pars = JokerParams(P_min=50*u.day, P_max=300*u.day, jitter=150*u.m/u.s)\n",
+    "joker = TheJoker(pars)\n",
+    "new_samples = joker.rejection_sample(data, n_prior_samples=1000000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = plot_two_panel(data, new_samples)\n",
+    "fig.axes[0].set_title(star.apogee_id)\n",
+    "fig.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mf = new_samples.get_orbit(0).m_f\n",
+    "get_m2_min(np.exp(star.ness_rg.lnM)*u.Msun, mf), np.exp(star.ness_rg.lnM)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ptf = ascii.read('/Users/adrian/Downloads/irsa_catalog_search_results.tbl')\n",
+    "# ptf = ptf[(ptf['oid'] == 35322100000378) & (ptf['fid'] == 2)]\n",
+    "\n",
+    "# plt.errorbar(ptf['obsmjd'], ptf['mag_autocorr'], \n",
+    "#              yerr=ptf['magerr_auto'], linestyle='none', marker='o')\n",
+    "# plt.ylim(14.0, 13.8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wise = ascii.read('/Users/adrian/Downloads/irsa_catalog_search_results_wise.tbl')\n",
+    "wise = wise[(wise['source_id_mf'] == '0206p181_ac51-027396')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.errorbar(((wise['mjd']) / new_samples['P'].value) % 1, wise['w1mpro_ep'], wise['w1sigmpro_ep'],\n",
+    "             linestyle='none', marker='o')\n",
+    "plt.ylim(12.2, 11.7)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "---\n",
     "\n",
     "## Period-ecc-logg"
@@ -295,14 +433,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cat = clean_cat\n",
+    "cat = clean_uni[clean_uni['LOGG'] > 2]\n",
     "\n",
-    "fig, axes = plt.subplots(1, 2, figsize=(9, 5.5), sharey=True)\n",
+    "fig, axes = plt.subplots(1, 2, figsize=(9, 5.5), sharex=True)\n",
     "\n",
-    "P_surface = period_at_surface(1.35*u.Msun, cat['LOGG'], \n",
-    "                              cat['e'], 0.4*u.Msun)\n",
-    "\n",
-    "cs = axes[0].scatter(cat['LOGG'], cat['P']/P_surface, \n",
+    "cs = axes[0].scatter(cat['P'], cat['LOGG'], \n",
     "                     c=cat['e'], alpha=0.75, linewidth=0.5, \n",
     "                     edgecolor='#333333', s=25, vmin=0, vmax=1, \n",
     "                     cmap='magma')\n",
@@ -310,12 +445,12 @@
     "axes[0].axhline(1., color='tab:blue', linewidth=1., \n",
     "                linestyle='--', zorder=-100)\n",
     "\n",
-    "axes[0].set_ylabel(r'$P / P_{\\rm surface}$')\n",
-    "axes[0].set_xlabel(r'$\\log g$')\n",
+    "axes[0].set_xlabel(r'$P$ [day]')\n",
+    "axes[0].set_ylabel(r'$\\log g$')\n",
     "\n",
-    "axes[0].set_ylim(0.4, 1000)\n",
-    "axes[0].set_xlim(4, 0)\n",
-    "axes[0].set_yscale('log')\n",
+    "axes[0].set_xlim(0.4, 3000)\n",
+    "axes[0].set_ylim(4, 0)\n",
+    "axes[0].set_xscale('log')\n",
     "\n",
     "cax = fig.add_axes([0.11, 0.85, 0.402, 0.03])\n",
     "cb = fig.colorbar(cs, cax=cax, orientation='horizontal')\n",
@@ -328,12 +463,12 @@
     "\n",
     "# ---\n",
     "\n",
-    "cs = axes[1].scatter(cat['e'], cat['P']/P_surface, \n",
+    "cs = axes[1].scatter(cat['P'], cat['e'], \n",
     "                     c=cat['LOGG'], alpha=0.75, linewidth=0.5, \n",
     "                     edgecolor='#333333', s=25, vmin=1, vmax=4, \n",
     "                     cmap='viridis')\n",
     "\n",
-    "axes[1].scatter(cat['e'][cat['DR14RC']], (cat['P']/P_surface)[cat['DR14RC']], \n",
+    "axes[1].scatter(cat['P'][cat['DR14RC']], cat['e'][cat['DR14RC']], \n",
     "                linewidth=1, edgecolor='tab:red', facecolor='none', s=40,\n",
     "                marker='o', zorder=100)\n",
     "\n",
@@ -341,11 +476,11 @@
     "                linestyle='--', zorder=-100)\n",
     "\n",
     "# axes[1].set_ylabel(r'$P / P_{\\rm surface}$')\n",
-    "axes[1].set_xlabel(r'eccentricity, $e$')\n",
+    "axes[1].set_ylabel(r'eccentricity, $e$')\n",
     "\n",
-    "axes[1].set_xlim(-0.05, 1)\n",
+    "axes[1].set_ylim(-0.05, 1)\n",
     "# axes[1].set_yscale('log')\n",
-    "axes[1].xaxis.set_ticks(np.arange(0, 1+0.2, 0.2))\n",
+    "axes[1].yaxis.set_ticks(np.arange(0, 1+0.2, 0.2))\n",
     "\n",
     "cax = fig.add_axes([0.565, 0.85, 0.402, 0.03])\n",
     "cb = fig.colorbar(cs, cax=cax, orientation='horizontal')\n",
@@ -567,7 +702,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
