--- a/paper/1-catalog/refs.bib
+++ b/paper/1-catalog/refs.bib
@@ -1,12 +1,183 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Adrian Price-Whelan at 2018-03-08 21:15:47 -0500 
+
+%% Created for Adrian Price-Whelan at 2018-03-10 09:57:59 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Tokovinin:2018,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2018ApJS..235....6T},
+	Archiveprefix = {arXiv},
+	Author = {{Tokovinin}, A.},
+	Date-Added = {2018-03-10 14:57:56 +0000},
+	Date-Modified = {2018-03-10 14:57:58 +0000},
+	Doi = {10.3847/1538-4365/aaa1a5},
+	Eid = {6},
+	Eprint = {1712.04750},
+	Journal = {\apjs},
+	Keywords = {binaries: close, binaries: general, binaries: visual},
+	Month = mar,
+	Pages = {6},
+	Primaryclass = {astro-ph.SR},
+	Title = {{The Updated Multiple Star Catalog}},
+	Volume = 235,
+	Year = 2018,
+	Bdsk-Url-1 = {https://dx.doi.org/10.3847/1538-4365/aaa1a5}}
+
+@misc{Price-Whelan:2017b,
+	Author = {Adrian Price-Whelan and David W. Hogg},
+	Date-Added = {2018-03-10 14:42:32 +0000},
+	Date-Modified = {2018-03-10 14:42:34 +0000},
+	Doi = {10.5281/zenodo.264481},
+	Month = jan,
+	Title = {adrn/thejoker: Release v0.1},
+	Url = {https://doi.org/10.5281/zenodo.264481},
+	Year = 2017,
+	Bdsk-Url-1 = {https://doi.org/10.5281/zenodo.264481}}
+
+@article{Price-Whelan:2017a,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2017JOSS....2..357P},
+	Author = {{Price-Whelan}, A.~M. and {Foreman-Mackey}, D.},
+	Date-Added = {2018-03-10 14:41:07 +0000},
+	Date-Modified = {2018-03-10 14:41:08 +0000},
+	Doi = {10.21105/joss.00357},
+	Eid = {357},
+	Journal = {The Journal of Open Source Software},
+	Month = sep,
+	Pages = {357},
+	Title = {{schwimmbad: A uniform interface to parallel processing pools in Python}},
+	Volume = 2,
+	Year = 2017,
+	Bdsk-Url-1 = {https://dx.doi.org/10.21105/joss.00357}}
+
+@inproceedings{Mathieu:2005,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2005ASPC..333...26M},
+	Author = {{Mathieu}, R.~D.},
+	Booktitle = {Tidal Evolution and Oscillations in Binary Stars},
+	Date-Added = {2018-03-09 20:10:29 +0000},
+	Date-Modified = {2018-03-09 20:10:30 +0000},
+	Editor = {{Claret}, A. and {Gim{\'e}nez}, A. and {Zahn}, J.-P.},
+	Month = nov,
+	Pages = {26},
+	Series = {Astronomical Society of the Pacific Conference Series},
+	Title = {{Tidal Circularization in Open Cluster Solar-Type Binary Stars: A Decadal Review}},
+	Volume = 333,
+	Year = 2005}
+
+@article{Zahn:1989,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/1989A%26A...220..112Z},
+	Author = {{Zahn}, J.-P.},
+	Date-Added = {2018-03-09 15:57:23 +0000},
+	Date-Modified = {2018-03-09 15:57:25 +0000},
+	Journal = {\aap},
+	Keywords = {Binary Stars, Stellar Evolution, Tides, Turbulence Effects, Mixing Length Flow Theory, Stellar Envelopes, Viscosity},
+	Month = aug,
+	Pages = {112-116},
+	Title = {{Tidal evolution of close binary stars. I - Revisiting the theory of the equilibrium tide}},
+	Volume = 220,
+	Year = 1989}
+
+@inproceedings{Mayor:1984,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/1984IAUS..105..411M},
+	Author = {{Mayor}, M. and {Mermilliod}, J.~C.},
+	Booktitle = {Observational Tests of the Stellar Evolution Theory},
+	Date-Added = {2018-03-09 15:33:43 +0000},
+	Date-Modified = {2018-03-09 15:33:44 +0000},
+	Editor = {{Maeder}, A. and {Renzini}, A.},
+	Pages = {411},
+	Series = {IAU Symposium},
+	Title = {{Orbit Circularization Time in Binary Stellar Systems}},
+	Volume = 105,
+	Year = 1984}
+
+@article{Verbunt:1995,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/1995A%26A...296..709V},
+	Author = {{Verbunt}, F. and {Phinney}, E.~S.},
+	Date-Added = {2018-03-09 15:05:10 +0000},
+	Date-Modified = {2018-03-09 15:05:12 +0000},
+	Journal = {\aap},
+	Keywords = {BINARIES: CLOSE, BINARIES: SPECTROSCOPIC, STARS: EVOLUTION, STARS: AGB AND POST-AGB},
+	Month = apr,
+	Pages = {709},
+	Title = {{Tidal circularization and the eccentricity of binaries containing giant stars.}},
+	Volume = 296,
+	Year = 1995}
+
+@article{Kjurkchieva:2017,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2017AJ....154..105K},
+	Author = {{Kjurkchieva}, D. and {Vasileva}, D. and {Atanasova}, T.},
+	Date-Added = {2018-03-09 14:55:24 +0000},
+	Date-Modified = {2018-03-09 14:55:25 +0000},
+	Doi = {10.3847/1538-3881/aa83b3},
+	Eid = {105},
+	Journal = {\aj},
+	Keywords = {binaries: eclipsing, stars: fundamental parameters, stars: solar-type, surveys},
+	Month = sep,
+	Pages = {105},
+	Title = {{Orbital Parameters of the Eclipsing Detached Kepler Binaries with Eccentric Orbits}},
+	Volume = 154,
+	Year = 2017,
+	Bdsk-Url-1 = {https://dx.doi.org/10.3847/1538-3881/aa83b3}}
+
+@article{Mathieu:1988,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/1988ApJ...326..256M},
+	Author = {{Mathieu}, R.~D. and {Mazeh}, T.},
+	Date-Added = {2018-03-09 14:52:29 +0000},
+	Date-Modified = {2018-03-09 14:52:31 +0000},
+	Doi = {10.1086/166087},
+	Journal = {\apj},
+	Keywords = {Binary Stars, Open Clusters, Stellar Evolution, Stellar Orbits, Circular Orbits, Clocks, Eccentric Orbits},
+	Month = mar,
+	Pages = {256-264},
+	Title = {{The circularized binaries in open clusters - A new clock for age determination}},
+	Volume = 326,
+	Year = 1988,
+	Bdsk-Url-1 = {https://dx.doi.org/10.1086/166087}}
+
+@article{Meibom:2006,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2006ApJ...653..621M},
+	Author = {{Meibom}, S. and {Mathieu}, R.~D. and {Stassun}, K.~G.},
+	Date-Added = {2018-03-09 14:35:09 +0000},
+	Date-Modified = {2018-03-09 14:35:11 +0000},
+	Doi = {10.1086/508252},
+	Eprint = {astro-ph/0608154},
+	Journal = {\apj},
+	Keywords = {Stars: Binaries: Spectroscopic, Galaxy: Open Clusters and Associations: General, Stars: Rotation},
+	Month = dec,
+	Pages = {621-635},
+	Title = {{An Observational Study of Tidal Synchronization in Solar-Type Binary Stars in the Open Clusters M35 and M34}},
+	Volume = 653,
+	Year = 2006,
+	Bdsk-Url-1 = {https://dx.doi.org/10.1086/508252}}
+
+@article{Massarotti:2008,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2008AJ....135..209M},
+	Author = {{Massarotti}, A. and {Latham}, D.~W. and {Stefanik}, R.~P. and {Fogel}, J.},
+	Date-Added = {2018-03-09 14:31:55 +0000},
+	Date-Modified = {2018-03-09 14:31:56 +0000},
+	Doi = {10.1088/0004-6256/135/1/209},
+	Journal = {\aj},
+	Keywords = {stars: AGB and post-AGB, stars: evolution, stars: rotation, binaries: spectroscopic, planetary systems, techniques: spectroscopic},
+	Month = jan,
+	Pages = {209-231},
+	Title = {{Rotational and Radial Velocities for a Sample of 761 HIPPARCOS Giants and the Role of Binarity}},
+	Volume = 135,
+	Year = 2008,
+	Bdsk-Url-1 = {https://dx.doi.org/10.1088/0004-6256/135/1/209}}
 
 @article{Eggleton:1983,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
