--- a/notebooks/figures/Numbers of visits and sample overview.ipynb
+++ b/notebooks/figures/Numbers of visits and sample overview.ipynb
@@ -119,6 +119,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "(nvisits < 8).sum(), (nvisits >= 8).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "(nvisits < 8).sum() / len(nvisits)"
    ]
   },
@@ -235,9 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
