--- a/notebooks/figures/Results.ipynb
+++ b/notebooks/figures/Results.ipynb
@@ -323,7 +323,7 @@
     "        # with LAMOST RV: http://dr3.lamost.org/spectrum/view?obsid=268505101\n",
     "        data = RVData(t=Time(np.append(data.t.mjd, [56980.]), format='mjd'),\n",
     "                      rv=np.append(data.rv.value, 11.1)*u.km/u.s,\n",
-    "                      stddev=np.append(data.stddev.value, 0.5)*u.km/u.s)\n",
+    "                      stddev=np.append(data.stddev.value, 1.)*u.km/u.s)\n",
     "        \n",
     "        fig = plot_two_panel(data, samples)\n",
     "        fig.axes[0].set_title(star.apogee_id)\n",
@@ -331,6 +331,15 @@
     "#         fig.savefig(path.join(_plot_path, '{0}.png'.format(apogee_id)), dpi=250)\n",
     "\n",
     "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "star.k"
    ]
   },
   {
@@ -348,18 +357,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from thejoker import TheJoker, JokerParams"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pars = JokerParams(P_min=50*u.day, P_max=300*u.day, jitter=150*u.m/u.s)\n",
-    "joker = TheJoker(pars)\n",
-    "new_samples = joker.rejection_sample(data, n_prior_samples=1000000)"
+    "with h5py.File('../../cache/2M01231070+1801407.hdf5') as f:\n",
+    "    new_samples = JokerSamples.from_hdf5(f)\n",
+    "    \n",
+    "# new_samples = samples"
    ]
   },
   {
@@ -369,7 +370,11 @@
    "outputs": [],
    "source": [
     "fig = plot_two_panel(data, new_samples)\n",
-    "fig.axes[0].set_title(star.apogee_id)\n",
+    "fig.axes[0].set_title('{0} - {1} samples'.format(star.apogee_id, len(new_samples)))\n",
+    "fig.tight_layout()\n",
+    "\n",
+    "fig = plot_two_panel(data, samples)\n",
+    "fig.axes[0].set_title('{0} - {1} samples'.format(star.apogee_id, len(samples)))\n",
     "fig.tight_layout()"
    ]
   },
@@ -379,8 +384,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mf = new_samples.get_orbit(0).m_f\n",
-    "get_m2_min(np.exp(star.ness_rg.lnM)*u.Msun, mf), np.exp(star.ness_rg.lnM)"
+    "m1 = np.exp(star.ness_rg.lnM) * u.Msun\n",
+    "\n",
+    "m2s = np.zeros(len(new_samples)) * u.Msun\n",
+    "for i in range(len(new_samples)):\n",
+    "    mf = new_samples.get_orbit(i).m_f\n",
+    "    m2s[i] = get_m2_min(m1, mf)\n",
+    "    \n",
+    "m2s_2 = np.zeros(len(samples)) * u.Msun\n",
+    "for i in range(len(samples)):\n",
+    "    mf = samples.get_orbit(i).m_f\n",
+    "    m2s_2[i] = get_m2_min(m1, mf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_, bins, _ = plt.hist(m2s.value, bins='auto', normed=True);\n",
+    "plt.hist(m2s_2.value, bins=bins, normed=True);\n",
+    "plt.axvline(m1.value)\n",
+    "plt.gca().xaxis.set_ticks(np.arange(1, 6, 0.5))"
    ]
   },
   {
@@ -425,6 +451,69 @@
     "---\n",
     "\n",
     "## Period-ecc-logg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.stats import binned_statistic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# bins = np.linspace(0, 3.1, 15)\n",
+    "# res15 = binned_statistic(np.log10(cat['P'].value), values=cat['e'], bins=bins,\n",
+    "#                          statistic=lambda x: np.percentile(x, 15))\n",
+    "# res50 = binned_statistic(np.log10(cat['P'].value), values=cat['e'], bins=bins,\n",
+    "#                          statistic=lambda x: np.percentile(x, 50))\n",
+    "# res85 = binned_statistic(np.log10(cat['P'].value), values=cat['e'], bins=bins,\n",
+    "#                          statistic=lambda x: np.percentile(x, 85))\n",
+    "\n",
+    "# binc = (res15.bin_edges[:-1]+res15.bin_edges[1:])/2\n",
+    "# plt.plot(binc, res15.statistic)\n",
+    "# plt.plot(binc, res50.statistic)\n",
+    "# plt.plot(binc, res85.statistic)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axes = plt.subplots(2, 3, figsize=(12, 8.5), sharex=True, sharey=True)\n",
+    "\n",
+    "grid = np.arange(2, 3.5+0.1, 0.3)\n",
+    "for i, (l, r) in enumerate(zip(grid, grid+0.5)):\n",
+    "    mask = (cat['LOGG'] > l) & (cat['LOGG'] <= r)\n",
+    "    subcat = cat[mask]\n",
+    "    axes.flat[i].errorbar(subcat['P'].value, subcat['e'], \n",
+    "                          xerr=subcat['P_err'].value, yerr=subcat['e_err'],\n",
+    "                          marker='o', linestyle='none', alpha=0.8)\n",
+    "    axes.flat[i].axvline(10., zorder=-10, color='#aaaaaa', linestyle='--')\n",
+    "    axes.flat[i].axvline(100., zorder=-10, color='#aaaaaa', linestyle='--')\n",
+    "    axes.flat[i].text(1, 0.95, r'${0:.2f} < \\log g \\leq {1:.2f}$'.format(l, r), \n",
+    "                      ha='left', va='top', fontsize=16, backgroundcolor='w')\n",
+    "    \n",
+    "    \n",
+    "axes.flat[0].set_xlim(0.8, 1800)\n",
+    "axes.flat[0].set_ylim(-0.05, 1.)\n",
+    "axes.flat[0].set_xscale('log')\n",
+    "\n",
+    "axes[1, 1].set_xlabel('period, $P$ [day]')\n",
+    "axes[0, 0].set_ylabel('eccentricity, $e$')\n",
+    "axes[1, 0].set_ylabel('eccentricity, $e$')\n",
+    "\n",
+    "fig.tight_layout()\n",
+    "\n",
+    "fig.savefig(path.join(plot_path, 'P-e-grid.pdf'))"
    ]
   },
   {
